MES-913 - Fixed Alignment Issues

--- a/src/pages/all-on-one-v2/all-on-one-v2.scss
+++ b/src/pages/all-on-one-v2/all-on-one-v2.scss
@@ -166,5 +166,5 @@ page-all-on-one-v2 {
   }
 }
 .manoeuvre {
-  margin-top: 45px !important;
+  margin-top: 47px !important;
 }
